src/objects/DMAPP__DM_Qualifier_Answer__c.object
<CustomObject>
    <description>NO CONFIGURATION SUPPORT

This object is responsible for storing answers to individual Qualifiers associated with an Opportunity</description>
    <fields>
        <fullName>DMAPP__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Completion__c</fullName>
        <label>Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Opportunity_Extra__c</fullName>
        <label>DM Opportunity Extra</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipName>DM_Qualifier_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__DM_Qualifier__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>DM Qualifier</label>
        <referenceTo>DMAPP__DM_Qualifier__c</referenceTo>
        <relationshipLabel>Qualifier Answers</relationshipLabel>
        <relationshipName>DM_Qualifier_Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <description>An external ID used for Dealmaker</description>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <color>#990000</color>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
                <color>#009900</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Qualifier Answer</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Qualifier Answer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Qualifier Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>